--- a/ContactList/ContactList.csproj
+++ b/ContactList/ContactList.csproj
@@ -98,14 +98,14 @@
   <ItemGroup>
     <Content Include="a2docs.css" />
     <Content Include="app\app.component.css" />
-    <Content Include="app\dashboard.component.css" />
-    <Content Include="app\dashboard.component.html" />
-    <Content Include="app\hero-detail.component.css" />
-    <Content Include="app\hero-detail.component.html" />
-    <Content Include="app\hero-search.component.css" />
-    <Content Include="app\hero-search.component.html" />
-    <Content Include="app\heroes.component.css" />
-    <Content Include="app\heroes.component.html" />
+    <Content Include="app\dashboard\dashboard.component.css" />
+    <Content Include="app\dashboard\dashboard.component.html" />
+    <Content Include="app\heroes\hero-detail\hero-detail.component.css" />
+    <Content Include="app\heroes\hero-detail\hero-detail.component.html" />
+    <Content Include="app\heroes\hero-search\hero-search.component.css" />
+    <Content Include="app\heroes\hero-search\hero-search.component.html" />
+    <Content Include="app\heroes\heroes.component.css" />
+    <Content Include="app\heroes\heroes.component.html" />
     <Content Include="contact-list.gif" />
     <Content Include="index.html" />
     <Content Include="main.css" />
@@ -141,13 +141,13 @@
     <TypeScriptCompile Include="app\app-routing.module.ts" />
     <TypeScriptCompile Include="app\app.component.ts" />
     <TypeScriptCompile Include="app\app.module.ts" />
-    <TypeScriptCompile Include="app\dashboard.component.ts" />
-    <TypeScriptCompile Include="app\hero-detail.component.ts" />
-    <TypeScriptCompile Include="app\hero-search.component.ts" />
-    <TypeScriptCompile Include="app\hero-search.service.ts" />
+    <TypeScriptCompile Include="app\dashboard\dashboard.component.ts" />
+    <TypeScriptCompile Include="app\heroes\hero-detail\hero-detail.component.ts" />
+    <TypeScriptCompile Include="app\heroes\hero-search\hero-search.component.ts" />
+    <TypeScriptCompile Include="app\heroes\hero-search\hero-search.service.ts" />
     <TypeScriptCompile Include="app\hero.service.ts" />
-    <TypeScriptCompile Include="app\hero.ts" />
-    <TypeScriptCompile Include="app\heroes.component.ts" />
+    <TypeScriptCompile Include="app\heroes\hero\hero.ts" />
+    <TypeScriptCompile Include="app\heroes\heroes.component.ts" />
     <TypeScriptCompile Include="app\in-memory-data.service.ts" />
     <TypeScriptCompile Include="app\main-aot.ts" />
     <TypeScriptCompile Include="app\main.ts" />
